--- a/bootstrap-elements.html
+++ b/bootstrap-elements.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Bootstrap Material</title>
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+        <link href="dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="dist/css/roboto.min.css" rel="stylesheet">
         <link href="dist/css/material-fullpalette.min.css" rel="stylesheet">
         <link href="dist/css/ripples.min.css" rel="stylesheet">
