--- a/confirm.html
+++ b/confirm.html
@@ -56,13 +56,13 @@
                   <label for="exampleInputEmail1">写真・アバター</label><br>
                   <div class="row form-registration-button">
                       <div class="col-xs-12">                       
-                        <button align="center" class="btn btn-info btn-raised">身分証明書の写真をアップロード</button>
+                        <button align="center" class="btn btn-info btn-raised" style="font-size:10px">身分証明書の写真をアップロード</button>
                       </div>
                       <div class="col-xs-6">
-                        <button align="center" class="btn btn-danger btn-raised">登録</button>
+                        <a align="center" href="welcome.html" class="btn btn-danger btn-raised">登録</a>
                       </div>
                       <div class="col-xs-6">
-                         <button align="center" class="btn btn-warning btn-raised">訂正</button>
+                         <a align="center" href="register.html" class="btn btn-warning btn-raised">訂正</a>
                       </div>
                   </div>
 
