--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
       <div>
         <div class="row">
               <div class="col-md-12">
-                  <h2 align="center" class="header">  <a class="btn btn-fab btn-raised btn-material-blue" href="login.html"><i class="mdi-navigation-arrow-back"></i></a>&nbsp;&nbsp;新規登録</h2>
+                  <h2 align="center" class="header">  <a class="btn btn-fab btn-raised btn-material-blue" href="index.html"><i class="mdi-navigation-arrow-back"></i></a>&nbsp;&nbsp;新規登録</h2>
               </div>
         </div>  
         <div class="row">
@@ -107,7 +107,7 @@
                       </div>
                        <div class="col-xs-8">
                           <button align="center" class="btn btn-primary btn-raised">写真を撮る</button><br>
-                          <button align="center" class="btn btn-info btn-raised">画像をアップロード</button>
+                          <button align="center" style="font-size:10px" class="btn btn-info btn-raised">画像をアップロード</button>
 
                        </div>
 
