--- a/welcome.html
+++ b/welcome.html
@@ -41,17 +41,17 @@
               <div class="form-group " style="padding:20px;border: 3px solid #8B80B0;border-radius: 15px;">
                 <h1 align="center" class="header"> ○○へようこそ </h1>
 <div class="form-registration-button">
-                   <img src="dist/img/avatar.jpg" align="center" style="margin:auto;" class="img-responsive img-circle" style="">
+                   <img src="dist/img/welcome.png" align="center" style="margin:auto;width:200px" class="img-responsive img-circle" style="">
 </div>
 
                  <br><br>
               
-                  <div class="row form-registration-button">
-                      <div class="col-xs-12">                       
+                  <div class="row">
+                      <div class="col-xs-12" style="text-align:center">                       
                         <button align="center" class="btn btn-primary btn-raised">身分証明書の写真をアップロード</button>
                       </div>
-                      <div class="col-xs-12">                       
-                        <button align="center" class="btn btn-info btn-raised">身分証明書の写真をアップロード</button>
+                      <div class="col-xs-12" style="text-align:center">                       
+                        <a align="center" href="home.html" class="btn btn-info btn-raised">身分証明書の写真をアップロード</a>
                       </div>
                   </div>
 
