--- a/eventInfo.html
+++ b/eventInfo.html
@@ -6,6 +6,7 @@
 <head>
   <title>Event Information</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootsrap.css-->
   <!-- <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +44,7 @@
                   &nbsp;
                   <a id="socialapp_appsBtn" class="btn btn-fab btn-raised btn-material-pink custom-fab" href="profile_home.html"><i class="mdi-navigation-apps navigation_bar_icons"></i></a> 
                   &nbsp;
-                  <a id="socialapp_chatBtn" class="btn btn-fab btn-raised btn-material-orange custom-fab"><i class="mdi-communication-chat navigation_bar_icons"></i></a>
+                  <a id="socialapp_chatBtn" class="btn btn-fab btn-raised btn-material-orange custom-fab" href="message.html"><i class="mdi-communication-chat navigation_bar_icons"></i></a>
                   &nbsp;
                   <a id="socialapp_infoBtn" class="btn btn-fab btn-raised btn-material-blue-800 custom-fab"><i class="mdi-alert-error navigation_bar_icons"></i></a>   
               </div>
