--- a/confirm.html
+++ b/confirm.html
@@ -6,6 +6,7 @@
 <head>
   <title>Confirm Registration</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootsrap.css-->
   <!-- <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,13 +32,12 @@
 <div class="container-fluid main">
       <div>
         <div class="row">
-              <div class="col-md-12">
+              <div class="col-xs-12">
                   <h2 align="center" class="header">  <a class="btn btn-fab btn-raised btn-material-blue" href="login.html"><i class="mdi-navigation-arrow-back"></i></a>&nbsp;&nbsp;ID 登録確認</h2>
               </div>
         </div>  
-        <div class="row">
-              <div class="col-md-4"></div>
-              <div class="col-md-4">
+        <div class="row">             
+              <div class="col-xs-12">
               <div class="form-group " style="padding:20px;border: 3px solid #8B80B0;border-radius: 15px;">
 
 <div class="form-registration-button">
@@ -56,21 +56,20 @@
                   <label for="exampleInputEmail1">写真・アバター</label><br>
                   <div class="row form-registration-button">
                       <div class="col-xs-12">                       
-                        <button align="center" class="btn btn-info btn-raised" style="font-size:10px">身分証明書の写真をアップロード</button>
+                        <button align="center" class="btn btn-info btn-raised" style="font-size:10px;width: 100%;">身分証明書の写真をアップロード</button>
                       </div>
                       <div class="col-xs-6">
-                        <a align="center" href="welcome.html" class="btn btn-danger btn-raised">登録</a>
+                        <a align="center" href="welcome.html" class="btn btn-danger btn-raised" style="width: 100%;">登録</a>
                       </div>
                       <div class="col-xs-6">
-                         <a align="center" href="register.html" class="btn btn-warning btn-raised">訂正</a>
+                         <a align="center" href="register.html" class="btn btn-warning btn-raised" style="width: 100%;">訂正</a>
                       </div>
                   </div>
 
                 <br>   
        
               </div>
-              </div>
-              <div class="col-md-4"></div>
+              </div>             
         </div>
       </div>
 
