--- a/createEvent.html
+++ b/createEvent.html
@@ -6,6 +6,7 @@
 <head>
   <title>Create an Event</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootsrap.css-->
   <!-- <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
