--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 <head>
   <title>Home</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootsrap.css-->
   <!-- <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -39,9 +40,8 @@
 <div class="container-fluid main">
       <div>
         
-        <div class="row" style="margin-top:50px">
-              <div class="col-md-4"></div>
-              <div class="col-md-4">
+        <div class="row" style="margin-top:50px">             
+              <div class="col-xs-12">
               
               <!-- Top Navigation Bar-->  
               <div class="social-navigationbar">
@@ -56,7 +56,8 @@
 
 
             <div>
-                <div class="row" style="margin-top:50px">
+                <div class="row" style="margin-top:50px;padding:5px">
+                <div class="row">
                   <div class="col-xs-4">
                     <button class="btn btn-material-red social-buttons"><img src="dist/img/dogpaw.png" class="img-responsive">     <div class="ripple-wrapper">
                     </div></button>
@@ -67,6 +68,8 @@
                   <div class="col-xs-4">
                     <button class="btn btn-material-purple social-buttons"><img src="dist/img/map1.png" class="img-responsive"><div class="ripple-wrapper"></div></button>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-xs-4">
                     <button class="btn btn-material-purple-300 social-buttons"><img src="dist/img/user1.png" class="img-responsive"><div class="ripple-wrapper"></div></button>
                   </div>
@@ -76,6 +79,8 @@
                   <div class="col-xs-4">
                     <button class="btn btn-material-teal-300 social-buttons"><img src="dist/img/bird.png" class="img-responsive"><div class="ripple-wrapper"></div></button>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-xs-4">
                     <button class="btn btn-material-light-blue social-buttons"><img src="dist/img/letters.png" class="img-responsive"><div class="ripple-wrapper"></div></button>
                   </div>
@@ -85,6 +90,8 @@
                   <div class="col-xs-4">
                     <button class="btn btn-material-green social-buttons"><img src="dist/img/suit.png" class="img-responsive"><div class="ripple-wrapper"></div></button>
                   </div>
+                </div>
+                <div class="row">
                   <div class="col-xs-4">
                     <button class="btn btn-material-red social-buttons"><img src="dist/img/dogpaw.png" class="img-responsive">     <div class="ripple-wrapper">
                     </div></button>
@@ -108,6 +115,7 @@
                      </div>
                    </div>
                   </div>
+                </div>
 
 
                 </div>
@@ -120,8 +128,7 @@
 
 
   
-              </div>
-              <div class="col-md-4"></div>
+              </div>              
         </div>
       </div>
 
