--- a/profile_home.html
+++ b/profile_home.html
@@ -6,6 +6,7 @@
 <head>
   <title>Page 9</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootsrap.css-->
   <!-- <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -40,9 +41,8 @@
 <div class="container-fluid main">
       <div>
         
-        <div class="row" style="margin-top:5px">
-              <div class="col-md-4"></div>
-              <div class="col-md-4">
+        <div class="row" style="margin-top:5px">              
+              <div class="col-xs-12">
               
               <!-- Top Navigation Bar-->  
               <div class="social-navigationbar">
@@ -110,8 +110,7 @@
 
 
   
-              </div>
-              <div class="col-md-4"></div>
+              </div>            
         </div>
       </div>
 
